[gd_scene load_steps=13 format=1]

[ext_resource path="res://game/rocket/rocket.gd" type="Script" id=1]
[ext_resource path="res://art/rocket.png" type="Texture" id=2]
[ext_resource path="res://game/rocket/DebugDraw.tscn" type="PackedScene" id=3]
[ext_resource path="res://art/skull.png" type="Texture" id=4]
[ext_resource path="res://art/explosjon3.png" type="Texture" id=5]
[ext_resource path="res://art/Cartoon-Astronaut.png" type="Texture" id=6]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -4.89815, 0.875571, -5.36714, -2.00446, -3.67879, -4.03967, -0.302076, -5.69089, 2.23045, -4.30848, 4.01261, -2.27326, 4.2002, 0.721969, 2.69944, 4.4852, -3.39739, 4.4852 )

[sub_resource type="ColorRamp" id=2]

offsets = FloatArray( 0, 0.502924, 0.994152 )
colors = ColorArray( 0.992188, 1, 0, 1, 0.90625, 0.390511, 0.0141602, 1, 0.90625, 0.0106201, 0.0106201, 1 )

[sub_resource type="ColorRamp" id=3]

offsets = FloatArray( 0, 1 )
colors = ColorArray( 0, 0, 0, 1, 0.0656281, 0.988281, 0.253042, 1 )

[sub_resource type="Animation" id=4]

length = 1.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.5 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0, 13 ]
}

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( 0.1129, -20.6224, 5.52394, -13.5026, 8.51425, -3.81968, 7.94466, 4.43927, 4.45329, 13.0309, -4.87095, 12.983, -7.51745, 4.61906, -8.57324, -4.38927, -5.57625, -13.4988 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 3.80623, 13.3545, 4.77682, 19.1781, -4.72856, 19.2484, -3.63505, 13.3545 )

[node name="Rocket" type="RigidBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.51812, 0, 0, 3.70819, 0.571488, 1.47728 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 5.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="RearThrust" type="Particles2D" parent="."]

config/amount = 200
config/lifetime = 1.0
config/process_mode = 1
config/offset = Vector2( 0, 10 )
params/direction = 0.0
params/spread = 30.0
params/linear_velocity = 45.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.17
params/hue_variation = 2.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/final_size = 1.0
color/color_ramp = SubResource( 2 )

[node name="RevThrust" type="Particles2D" parent="."]

config/amount = 200
config/lifetime = 1.0
config/process_mode = 1
config/offset = Vector2( 0, 10 )
params/direction = 180.0
params/spread = 30.0
params/linear_velocity = 45.0
params/spin_velocity = 0.0
params/orbit_velocity = 0.0
params/gravity_direction = 0.0
params/gravity_strength = 9.8
params/radial_accel = 0.0
params/tangential_accel = 0.0
params/damping = 0.0
params/initial_angle = 0.0
params/initial_size = 1.0
params/final_size = 1.17
params/hue_variation = 2.0
params/anim_speed_scale = 1.0
params/anim_initial_pos = 0.0
randomness/final_size = 1.0
color/color = Color( 0, 0.914062, 0.121399, 1 )
color/color_ramp = SubResource( 3 )

[node name="RocketSprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )

[node name="ShipCollision" type="CollisionPolygon2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0.571488, 1.47728 )
transform/scale = Vector2( 1.51812, 3.70819 )
build_mode = 0
polygon = Vector2Array( -4.89815, 0.875571, -5.36714, -2.00446, -3.67879, -4.03967, -0.302076, -5.69089, 2.23045, -4.30848, 4.01261, -2.27326, 4.2002, 0.721969, 2.69944, 4.4852, -3.39739, 4.4852 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="debug_draw" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="CollisionLabel" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 15.0
margin/top = -42.0
margin/right = 55.0
margin/bottom = -28.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="SkullSprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )

[node name="ExplosionSprite" type="Sprite" parent="."]

texture = ExtResource( 5 )
vframes = 4
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExplosionSprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/explode = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="ShipArea" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="ShipAreaCollision" type="CollisionPolygon2D" parent="ShipArea"]

build_mode = 0
polygon = Vector2Array( -5.57625, -13.4988, -8.57324, -4.38927, -7.51745, 4.61906, -4.87095, 12.983, 4.45329, 13.0309, 7.94466, 4.43927, 8.51425, -3.81968, 5.52394, -13.5026, 0.1129, -20.6224 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="FootArea" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FootArea"]

build_mode = 0
polygon = Vector2Array( -3.63505, 13.3545, -4.72856, 19.2484, 4.77682, 19.1781, 3.80623, 13.3545 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="CosmonautSprite" type="Sprite" parent="."]

transform/pos = Vector2( 1.8245, 2.46402 )
transform/scale = Vector2( 0.0557921, 0.0564672 )
texture = ExtResource( 6 )


